# gazebo_ros2_control_a_mini_demo

./: CMakeLists.txt  README.md  package.xml
config/: gazebo_robot_control.yaml
launch/: run_gazebo.py
urdf/: bot_test.urdf
